# You-Yun-Bei

./: .gitignore  AGENTS.md  README.md  README_EN.md  nuxt.config.ts  package.json  pnpm-lock.yaml  项目开发规范文档.md
.github/workflows/: pre-release.yml  release.yml  rust-clippy.yml  tauri.yml
doc/en/: README.md
doc/zh-CN/: README.md
locales/: en_US.json  fr.json  ko.json  nb_NO.json  ta.json  uk.json  zh_SIMPLIFIED.json
scripts/: portable.mjs
src/: App.vue  bindings.ts  i18n.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: default_value.rs  device.rs  ipc_handler.rs  lib.rs  main.rs  path_resolver.rs
src-tauri/src/backup/: archive.rs  game.rs  game_snapshots.rs  save_unit.rs  snapshot.rs  utils.rs
src-tauri/src/cloud_sync/: backend.rs  cloud_settings.rs  mod.rs  utils.rs
src-tauri/src/config/: app_config.rs  mod.rs  quick_actions_settings.rs  settings.rs  utils.rs
src-tauri/src/game_scan/: db.rs  ipc.rs  linux.rs  macos.rs  mod.rs  platform.rs  resolver.rs  types.rs  windows.rs
src-tauri/src/preclude/: errors.rs  mod.rs  utils.rs
src-tauri/src/preclude/traits/: mod.rs
src-tauri/src/quick_actions/: hotkeys.rs  manager.rs  mod.rs  tray.rs  utils.rs
src-tauri/src/sound/: mod.rs
src-tauri/src/updater/: migration.rs  mod.rs  probe.rs
src-tauri/src/updater/versions/: mod.rs  v1_4_0.rs
src/components/: DeviceSetupDialog.vue  FavoriteSideBar.vue  HotkeySelector.vue  MainSideBar.vue  PathVariableSelector.vue  SaveLocationDrawer.vue
src/composables/: useConfig.ts  useGlobalLoading.ts  useNotification.ts
src/layouts/: default.vue
src/middleware/: error.global.ts
src/pages/: About.vue  AddGame.vue  Settings.vue  SyncSettings.vue  index.vue
src/pages/Management/: PCGW.vue  Scan.vue  [name].vue
