[package]
name = "rgsm"
version = "1.5.4"
description = "A user friendly game save manager"
authors = ["Sworld"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rgsm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.28"
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-log = "2.7.0"
rust-i18n = "3.1.5"
anyhow = "1.0.97"
semver = "1.0.26"
opendal = { version = "0.54.0", features = ["services-webdav", "services-s3"] }
fs_extra = "1.3.0"
zip = "5.1.1"
open = "5.3.2"
chrono = "0.4.40"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tauri-plugin-dialog = "2.4.0"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
temp-dir = "0.1.14"
notify-rust = "4.11.5"
hostname = "0.4.0"
dirs = "6.0.0"
whoami = "1.6.0"
machine-uid = "0.5.3"
rodio = { version = "0.18.1", features = ["flac", "mp3", "vorbis"] }
winreg = { version = "0.12.0" }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "gzip"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-window-state = "2.4.0"

[profile.release]
# 关闭调试符号以避免在 Windows 上链接 PDB 导致的 mspdbcore.dll 相关问题
debug = 0

